src/k8s/ClusterIP-Service.yml
apiVersion: v1
kind: Service
metadata:
  name: simpleapi-internal-service
  labels:
    app: simpleapi
    service: simpleapi
spec:
  type: LoadBalancer
  ports:
    - port: 5005 #this  port is the port which belongs to ClusterIP which will be exposed
      targetPort: 80 #this port should match with the port application is targetting in this case: containerPort: 80.
      nodePort: 30010 # this should be in from range: 30000 - 32767
      protocol: TCP
  selector:
    service: simpleapi #This should match with Pod label
