src/k8s/Deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simpleapi
  labels:
    app: simpleapi
spec:
  selector:
    matchLabels:
      app: simpleapi
  replicas: 2
  template: #POD 
    metadata:
      labels:
        app: simpleapi 
        service: simpleapi
    spec:
      containers:
        - name: simpleapi
          image: doniyozov/api:v2
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
              protocol: TCP    
---
apiVersion: v1
kind: Service
metadata:
  name: simpleapi
  labels:
    app: simpleapi
    service: simpleapi
spec:
  type: LoadBalancer
  ports:
    - port: 5005 #his  port is the port which belongs to ClusterIP which will be exposed
      targetPort: 80 #this port should match with the port application is targetting in this case: containerPort: 80. 
      nodePort: 30011 # this should be in from range: 30000 - 32767
      protocol: TCP
  selector:
    service: simpleapi #This should match with Pod label
