src/k8s/Ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: simpleapi
spec: 
  rules:
  - host: simpleapi.com
    http:
      paths:
      - path: /api
        pathType: Prefix   
        backend: 
          service:
            name: kubernetes-dashboard
            port:
              number: 5005
